Title and footer

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
 theme: minima
+title: codewarrior0's cipher blog
+author: codewarrior0 (David Vierra)
+email: codewarrior0@gmail.com
+
+description:
+  Deciphering things and explaining everything.
+
+
+github_username: codewarrior0
